yaml/services/kubefun-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubefun-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: kubefun
