yaml/services/kubefun-svc-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: kubefun-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: kubefun
