yaml/services/kubefun-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubefun
spec:
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: kubefun
